--- a/index.html
+++ b/index.html
@@ -10,22 +10,23 @@
     <main>
         <div class="card-component">
             <section class="card-component__image-container">
-                <img src="./src/img/illustration-article.svg" alt="" class="image-container__image">
+                <img src="./src/img/illustration-article.svg" alt="Item image" class="image-container__image">
             </section>
             <section class="card-component__summary-container">
                 <h3>Learning</h3>
-                <p>Published 21 Dec 2023</p>
+                <h4>Published 21 Dec 2023</h4>
                 <h1>HTML & CSS foundations</h1>
                 <p>These languages are the backbone of every website, defining structure, content, and presentation.</p>
             </section>
             <section class="card-component__autor-container">
-                </h3>Greg Hooper</h3>
+                <img src="./src/img/image-avatar.webp" alt="Autor photo" class="autor-container__autor-photo">
+                <h3 class="autor-container__autor-name">Greg Hooper</h3>
             </section>
         </dic>    
     </main>
     <footer>
-        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-        Coded by <a href="#">Your Name Here</a>.
+        <p>Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.</p>
+        <p>Coded by <a href="https://www.linkedin.com/in/mykola-pyroh/">Mykola Pyroh</a>.</p>
     </footer>
 </body>
 </html>
