--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog preview card</title>
+    <link rel="shortcut icon" href="./src/img/favicon-32x32.png" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <main>
-        <div class="card-component">
+        <article class="card-component">
             <section class="card-component__image-container">
                 <img src="./src/img/illustration-article.svg" alt="Item image" class="image-container__image">
             </section>
@@ -22,11 +23,11 @@
                 <img src="./src/img/image-avatar.webp" alt="Autor photo" class="autor-container__autor-photo">
                 <h3 class="autor-container__autor-name">Greg Hooper</h3>
             </section>
-        </dic>    
+        </article>    
     </main>
     <footer>
         <p>Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.</p>
-        <p>Coded by <a href="https://www.linkedin.com/in/mykola-pyroh/">Mykola Pyroh</a>.</p>
+        <p>Coded by <a href="https://www.linkedin.com/in/mykola-pyroh/" target="_blank">Mykola Pyroh</a>.</p>
     </footer>
 </body>
 </html>
